--- a/index.html
+++ b/index.html
@@ -3,58 +3,80 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Simple MindAR - 3 Markers</title>
+  <title>MindAR 3 Markers</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mindar@1.0.0/dist/mindar-image-aframe.prod.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aframe-extras@7.0.0/dist/aframe-extras.min.js"></script>
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
 
   <style>
-    body { margin: 0; overflow: hidden; }
-    .info {
-      position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%);
-      background: rgba(0,0,0,0.7); color: white; padding: 12px 24px; border-radius: 30px;
-      font-family: Arial, sans-serif; z-index: 100;
-    }
+    body { margin:0; background:#000; overflow:hidden; font-family:Arial; }
+    #start { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); padding:20px 40px; font-size:22px; background:#0088ff; color:white; border:none; border-radius:12px; z-index:9999; }
+    #msg  { position:fixed; bottom:30px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.7); color:white; padding:12px 24px; border-radius:30px; z-index:9999; }
+    #err  { position:fixed; top:20px; left:20px; right:20px; background:red; color:white; padding:15px; border-radius:10px; z-index:9999; display:none; }
   </style>
 </head>
 <body>
-  <div class="info">Point camera at any marker</div>
 
-  <a-scene
-    mindar-image="imageTargetSrc: targets.mind; uiLoading: no; uiScanning: no;"
-    color-space="sRGB"
+  <button id="start">START AR EXPERIENCE</button>
+  <div id="msg">Tap the blue button → allow camera</div>
+  <div id="err"></div>
+
+  <a-scene id="scene"
     embedded
-    renderer="colorManagement: true"
-    vr-mode-ui="enabled: false"
-    device-orientation-permission-ui="enabled: false">
+    mindar-image="imageTargetSrc: targets.mind; uiLoading:no; uiScanning:no; uiError:no; showStats:true"
+    color-space="sRGB"
+    renderer="colorManagement:true"
+    vr-mode-ui="enabled:false"
+    device-orientation-permission-ui="enabled:false"
+    style="display:none">
 
-    <a-assets>
-      <a-asset-item id="asset1" src="asset1.glb"></a-asset-item>
-      <a-asset-item id="asset2" src="asset2.glb"></a-asset-item>
-      <a-asset-item id="asset3" src="asset3.glb"></a-asset-item>
+    <a-assets timeout="120000">
+      <a-asset-item id="m1" src="asset1.glb"></a-asset-item>
+      <a-asset-item id="m2" src="asset2.glb"></a-asset-item>
+      <a-asset-item id="m3" src="asset3.glb"></a-asset-item>
     </a-assets>
 
-    <!-- Lighting -->
-    <a-entity light="type: ambient; intensity: 1"></a-entity>
-    <a-entity light="type: directional; intensity: 0.8" position="2 4 4"></a-entity>
+    <a-entity light="type:ambient; intensity:0.8"></a-entity>
+    <a-entity light="type:directional; intensity:0.8" position="1 2 2"></a-entity>
 
-    <!-- Marker 0 → target1.jpg → asset1.glb -->
-    <a-entity mindar-image-target="targetIndex: 0">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#asset1" animation-mixer></a-gltf-model>
+    <a-entity mindar-image-target="targetIndex:0">
+      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#m1" animation-mixer></a-gltf-model>
+    </a-entity>
+    <a-entity mindar-image-target="targetIndex:1">
+      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#m2" animation-mixer></a-gltf-model>
+    </a-entity>
+    <a-entity mindar-image-target="targetIndex:2">
+      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#m3" animation-mixer></a-gltf-model>
     </a-entity>
 
-    <!-- Marker 1 → target2.jpg → asset2.glb -->
-    <a-entity mindar-image-target="targetIndex: 1">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#asset2" animation-mixer></a-gltf-model>
-    </a-entity>
-
-    <!-- Marker 2 → target3.jpg → asset3.glb -->
-    <a-entity mindar-image-target="targetIndex: 2">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#asset3" animation-mixer></a-gltf-model>
-    </a-entity>
-
-    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-camera position="0 0 0" look-controls="enabled:false"></a-camera>
   </a-scene>
+
+  <script>
+    document.getElementById('start').addEventListener('click', async () => {
+      const sceneEl = document.getElementById('scene');
+      const errEl   = document.getElementById('err');
+      const msgEl   = document.getElementById('msg');
+      const btn     = document.getElementById('start');
+
+      btn.style.display = 'none';
+      msgEl.textContent = 'Starting camera…';
+      sceneEl.style.display = 'block';
+
+      try {
+        await sceneEl.components['mindar-image-system'].start();
+        msgEl.textContent = 'Point camera at any marker';
+        errEl.style.display = 'none';
+      } catch (e) {
+        console.error(e);
+        errEl.textContent = 'Camera failed: ' + e.message + '. Try again or check permissions.';
+        errEl.style.display = 'block';
+        sceneEl.style.display = 'none';
+        btn.style.display = 'block';
+      }
+    });
+  </script>
 </body>
 </html>
