--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>MindAR 3 Markers</title>
+  <title>Endangered AR - 3 Targets</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
@@ -11,26 +11,26 @@
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
 
   <style>
-    body { margin:0; background:#000; overflow:hidden; font-family:Arial; }
+    body { margin:0; background:#000; overflow:hidden; font-family:sans-serif; }
     #start { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); padding:20px 40px; font-size:22px; background:#0088ff; color:white; border:none; border-radius:12px; z-index:9999; }
-    #msg  { position:fixed; bottom:30px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.7); color:white; padding:12px 24px; border-radius:30px; z-index:9999; }
-    #err  { position:fixed; top:20px; left:20px; right:20px; background:red; color:white; padding:15px; border-radius:10px; z-index:9999; display:none; }
+    #msg { position:fixed; bottom:30px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.7); color:white; padding:12px 30px; border-radius:30px; z-index:9999; }
+    #err { position:fixed; top:20px; left:20px; right:20px; background:red; color:white; padding:15px; border-radius:10px; z-index:9999; display:none; }
   </style>
 </head>
 <body>
 
   <button id="start">START AR EXPERIENCE</button>
-  <div id="msg">Tap the blue button → allow camera</div>
+  <div id="msg">Tap button → allow camera</div>
   <div id="err"></div>
 
-  <a-scene id="scene"
-    embedded
+  <a-scene 
+    id="scene"
+    embedded 
     mindar-image="imageTargetSrc: targets.mind; uiLoading:no; uiScanning:no; uiError:no; showStats:true"
     color-space="sRGB"
     renderer="colorManagement:true"
     vr-mode-ui="enabled:false"
-    device-orientation-permission-ui="enabled:false"
-    style="display:none">
+    device-orientation-permission-ui="enabled:false">
 
     <a-assets timeout="120000">
       <a-asset-item id="m1" src="asset1.glb"></a-asset-item>
@@ -55,28 +55,41 @@
   </a-scene>
 
   <script>
-    document.getElementById('start').addEventListener('click', async () => {
-      const sceneEl = document.getElementById('scene');
-      const errEl   = document.getElementById('err');
-      const msgEl   = document.getElementById('msg');
-      const btn     = document.getElementById('start');
+    const startBtn = document.getElementById('start');
+    const msg = document.getElementById('msg');
+    const err = document.getElementById('err');
+    const sceneEl = document.getElementById('scene');
 
-      btn.style.display = 'none';
-      msgEl.textContent = 'Starting camera…';
-      sceneEl.style.display = 'block';
+    startBtn.onclick = async () => {
+      startBtn.style.display = 'none';
+      msg.textContent = 'Loading AR...';
 
-      try {
-        await sceneEl.components['mindar-image-system'].start();
-        msgEl.textContent = 'Point camera at any marker';
-        errEl.style.display = 'none';
-      } catch (e) {
-        console.error(e);
-        errEl.textContent = 'Camera failed: ' + e.message + '. Try again or check permissions.';
-        errEl.style.display = 'block';
-        sceneEl.style.display = 'none';
-        btn.style.display = 'block';
+      sceneEl.addEventListener('loaded', async () => {
+        try {
+          // Wait a tick for MindAR system to fully register
+          await new Promise(resolve => setTimeout(resolve, 100));
+          
+          if (!sceneEl.systems['mindar-image-system']) {
+            throw new Error('MindAR system not ready - retry in 1s');
+          }
+          
+          await sceneEl.systems['mindar-image-system'].start();
+          msg.textContent = '✅ Camera on! Point at any marker (green stats = tracking active)';
+          console.log('AR started successfully');
+        } catch (e) {
+          console.error('Start error:', e);
+          err.textContent = 'Failed to start: ' + e.message + '. (Tap button to retry)';
+          err.style.display = 'block';
+          startBtn.style.display = 'block';
+          msg.textContent = 'Tap to retry';
+        }
+      }, { once: true });
+
+      // Kick off load if not already
+      if (sceneEl.hasLoaded) {
+        sceneEl.emit('loaded');
       }
-    });
+    };
   </script>
 </body>
 </html>
