--- a/index.html
+++ b/index.html
@@ -2,94 +2,53 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Endangered AR - 3 Targets</title>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <title>Endangered AR</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
 
   <style>
-    body { margin:0; background:#000; overflow:hidden; font-family:sans-serif; }
-    #start { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); padding:20px 40px; font-size:22px; background:#0088ff; color:white; border:none; border-radius:12px; z-index:9999; }
-    #msg { position:fixed; bottom:30px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.7); color:white; padding:12px 30px; border-radius:30px; z-index:9999; }
-    #err { position:fixed; top:20px; left:20px; right:20px; background:red; color:white; padding:15px; border-radius:10px; z-index:9999; display:none; }
+    body{margin:0;background:#000;overflow:hidden;font-family:sans-serif}
+    #startBtn{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:20px 40px;font-size:22px;background:#0088ff;color:#fff;border:none;border-radius:12px;z-index:9999}
+    #info{position:fixed;bottom:30px;left:50%;transform:translateX(-50%);background:rgba(0,0,0,0.7);color:#fff;padding:12px 30px;border-radius:30px;z-index:9999}
   </style>
 </head>
 <body>
+  <button id="startBtn">START AR EXPERIENCE</button>
+  <div id="info">Tap button → allow camera</div>
 
-  <button id="start">START AR EXPERIENCE</button>
-  <div id="msg">Tap button → allow camera</div>
-  <div id="err"></div>
+  <a-scene embedded mindar-image="imageTargetSrc: targets.mind; showStats: true; uiLoading: no; uiScanning: no; uiError: no;"
+           color-space="sRGB" renderer="colorManagement:true" vr-mode-ui="enabled:false" device-orientation-permission-ui="enabled:false">
 
-  <a-scene 
-    id="scene"
-    embedded 
-    mindar-image="imageTargetSrc: targets.mind; uiLoading:no; uiScanning:no; uiError:no; showStats:true;"
-    color-space="sRGB"
-    renderer="colorManagement:true"
-    vr-mode-ui="enabled:false"
-    device-orientation-permission-ui="enabled:false">
-
-    <a-assets timeout="120000">
-      <a-asset-item id="m1" src="asset1.glb"></a-asset-item>
-      <a-asset-item id="m2" src="asset2.glb"></a-asset-item>
-      <a-asset-item id="m3" src="asset3.glb"></a-asset-item>
+    <a-assets timeout="60000">
+      <a-asset-item id="model1" src="asset1.glb"></a-asset-item>
+      <a-asset-item id="model2" src="asset2.glb"></a-asset-item>
+      <a-asset-item id="model3" src="asset3.glb"></a-asset-item>
     </a-assets>
 
-    <a-entity light="type:ambient; intensity:0.8"></a-entity>
-    <a-entity light="type:directional; intensity:0.8" position="1 2 2"></a-entity>
+    <a-entity light="type: ambient; intensity: 0.8"></a-entity>
+    <a-entity light="type: directional; intensity: 0.8" position="1 2 2"></a-entity>
 
     <a-entity mindar-image-target="targetIndex:0">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#m1" animation-mixer></a-gltf-model>
+      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#model1" animation-mixer></a-gltf-model>
     </a-entity>
     <a-entity mindar-image-target="targetIndex:1">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#m2" animation-mixer></a-gltf-model>
+      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#model2" animation-mixer></a-gltf-model>
     </a-entity>
     <a-entity mindar-image-target="targetIndex:2">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#m3" animation-mixer></a-gltf-model>
+      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#model3" animation-mixer></a-gltf-model>
     </a-entity>
 
     <a-camera position="0 0 0" look-controls="enabled:false"></a-camera>
   </a-scene>
 
   <script>
-    AFRAME.registerComponent('ar-start', {
-      init: function () {
-        this.startAR = this.startAR.bind(this);
-      },
-      startAR: async function () {
-        const msg = document.getElementById('msg');
-        const err = document.getElementById('err');
-        const startBtn = document.getElementById('start');
-        const sceneEl = this.el;
-
-        startBtn.style.display = 'none';
-        msg.textContent = 'Loading AR...';
-
-        try {
-          // Official MindAR wait + start (fixes timing)
-          await new Promise(resolve => setTimeout(resolve, 500)); // Extra buffer for system reg
-          const mindar = sceneEl.systems['mindar-image-system'];
-          if (!mindar) throw new Error('MindAR not ready');
-          await mindar.start();
-          msg.textContent = '✅ Camera on! Point at any marker (green stats = tracking)';
-          console.log('AR started');
-        } catch (e) {
-          console.error('AR error:', e);
-          err.textContent = 'Start failed: ' + e.message + '. Retry button.';
-          err.style.display = 'block';
-          startBtn.style.display = 'block';
-          msg.textContent = 'Tap to retry';
-        }
-      }
-    });
-
-    document.addEventListener('DOMContentLoaded', () => {
-      const sceneEl = document.querySelector('a-scene');
-      sceneEl.setAttribute('ar-start', '');
-      document.getElementById('start').onclick = () => sceneEl.components['ar-start'].startAR();
+    document.getElementById('startBtn').addEventListener('click', () => {
+      document.getElementById('startBtn').style.display = 'none';
+      document.getElementById('info').textContent = 'Starting camera…';
+      // MindAR automatically starts the camera when the scene is visible
+      // No manual .start() needed → removes all "undefined" errors
     });
   </script>
 </body>
