--- a/index.html
+++ b/index.html
@@ -1,56 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-  <title>Simple Multi-Target AR</title>
+    <head>
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+    </head>
 
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
+    <body style="margin: 0; overflow: hidden;">
+        <a-scene
+            vr-mode-ui="enabled: false;"
+            loading-screen="enabled: false;"
+            renderer="logarithmicDepthBuffer: true;"
+            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+            id="scene"
+            embedded
+            gesture-detector
+        >
+            <a-assets>
+                <a-asset-item
+                    id="animated-asset"
+                    src="assets/asset.glb"
+                ></a-asset-item>
+            </a-assets>
 
-  <style>
-    body{margin:0;background:#000;overflow:hidden;font-family:sans-serif}
-    #startBtn{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:20px 40px;font-size:22px;background:#0088ff;color:#fff;border:none;border-radius:12px;z-index:9999}
-    #info{position:fixed;bottom:30px;left:50%;transform:translateX(-50%);background:rgba(0,0,0,0.7);color:#fff;padding:12px 30px;border-radius:30px;z-index:9999}
-  </style>
-</head>
-<body>
-  <button id="startBtn">START AR EXPERIENCE</button>
-  <div id="info">Tap button → allow camera</div>
+            <a-marker
+                id="animated-marker"
+                type="pattern"
+                preset="custom"
+                url="assets/marker.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="markerA"
+            >
+                <a-entity
+                    id="bowser-model"
+                    scale="4.965528603895715 4.965528603895715 4.965528603895715"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset"
+                    class="clickable"
+                    gesture-handler
+                ></a-entity>
+            </a-marker>
 
-  <a-scene embedded mindar-image="imageTargetSrc: targets.mind; showStats: true; uiLoading: no; uiScanning: no; uiError: no;"
-           color-space="sRGB" renderer="colorManagement:true" vr-mode-ui="enabled:false" device-orientation-permission-ui="enabled:false">
-
-    <a-assets timeout="60000">
-      <a-asset-item id="model1" src="asset1.glb"></a-asset-item>
-      <a-asset-item id="model2" src="asset2.glb"></a-asset-item>
-      <a-asset-item id="model3" src="asset3.glb"></a-asset-item>
-    </a-assets>
-
-    <a-entity light="type: ambient; intensity: 0.8"></a-entity>
-    <a-entity light="type: directional; intensity: 0.8" position="1 2 2"></a-entity>
-
-    <a-entity mindar-image-target="targetIndex:0">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#model1" animation-mixer></a-gltf-model>
-    </a-entity>
-
-    <a-entity mindar-image-target="targetIndex:1">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#model2" animation-mixer></a-gltf-model>
-    </a-entity>
-
-    <a-entity mindar-image-target="targetIndex:2">
-      <a-gltf-model rotation="-90 0 0" scale="0.5 0.5 0.5" src="#model3" animation-mixer></a-gltf-model>
-    </a-entity>
-
-    <a-camera position="0 0 0" look-controls="enabled:false"></a-camera>
-  </a-scene>
-
-  <script>
-    document.getElementById('startBtn').addEventListener('click', () => {
-      document.getElementById('startBtn').style.display = 'none';
-      document.getElementById('info').textContent = 'Starting camera…';
-    });
-  </script>
-</body>
+            <a-entity camera></a-entity>
+        </a-scene>
+    </body>
 </html>
